--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <li class="list-items">samuel</li>
             <li class="list-items">Israel</li>
             <li class="list-items">Mr Akande</li>
+            <button class="enroll button">Enroll now</button>
         </ol>
     </div>
      <!---EXTERNAL STYLING-->
@@ -47,7 +48,7 @@
         <form class="form">
             <h2 class="form-heading">Add a student here</h2>
             <input class="form-input" type="text" placeholder="Add a student here"><br><br>
-            <button class="form-button">Add Student</button>
+            <button class="form-button">Add student</button>
         </form>
     </div>
 </body>
